# Homework

./: CArmy.cpp  CArmy.h  CBattlefield.cpp  CBattlefield.h  CBeast.cpp  CBeast.h  CFactory.h  CGame.cpp  CGame.h  CHuman.cpp  CHuman.h  CLeader.cpp  CLeader.h  CLizard.cpp  CLizard.h  CMakeLists.txt  CRace.cpp  CRace.h  CRaceFactory.cpp  CRaceFactory.h  CUnit.cpp  CUnit.h  CVarriors.cpp  CVarriors.h  Command.cpp  Command.h  File1  Game Documentation.docx  IFactory.h  IObject.h  IPrinter.h  Mygame.cpp  Right_cin_func.cpp  Right_cin_func.h  Test.cpp  Test.h
